Fix margins and attempt to fix scrollbar

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
-    margin: 4rem;
-    padding: 4rem;
-    border: 4rem;
+    margin: 20px;
+    padding: 0;
+    border: 0;
     outline: 0;
     font-size: 100%;
     vertical-align: baseline;
@@ -9,7 +9,7 @@
 }
 
 /* display background color black on navbar scroll */
-.navbarScroll.navbarDark {
+.navbarDark {
     background-color: black;
 }
 
